[package]
name = "httpress-example"
version = "0.1.0"
edition = "2024"

[dependencies]
httpress = "0.6"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
